added ratelimit middleware to all routes and updated swagger doc added redis to compose file and env
