# backend/routes/auth.js
@@ -1,9 +1,10 @@
 import express from "express";
 import { login, register } from "../controllers/auth.js";
+import { rateLimiter } from '../middleware/ratelimiter.js';
 
 const router = express.Router();
 
-router.post("/login", login);
-router.post("/register", register);
+router.post("/login", rateLimiter(1,10), login);
+router.post("/register", rateLimiter(1,10), register);
 
 export default router;
