# backend/swagger.yaml
@@ -106,6 +106,10 @@ paths:
       tags: [Forms]
       security:
         - bearerAuth: []
+      x-rate-limit:
+        limit: 100
+        window: 1m
+        description: Rate limit of 100 requests per 1 minutes
       requestBody:
         required: true
         content:
@@ -119,6 +123,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/FormOutput'
+        429:
+          description: Rate limit exceeded
         500:
           description: Internal server error
 
@@ -128,6 +134,10 @@ paths:
       tags: [Forms]
       security:
         - bearerAuth: []
+      x-rate-limit:
+        limit: 100
+        window: 1m
+        description: Rate limit of 100 requests per 1 minutes
       responses:
         200:
           description: Successfully retrieved forms
@@ -139,6 +149,8 @@ paths:
                   $ref: '#/components/schemas/FormOutput'
         204:
           description: No content
+        429:
+          description: Rate limit exceeded
         500:
           description: Internal server error
 
@@ -148,6 +160,10 @@ paths:
       tags: [Forms]
       security:
         - bearerAuth: []
+      x-rate-limit:
+        limit: 100
+        window: 1m
+        description: Rate limit of 100 requests per 1 minutes
       parameters:
         - in: path
           name: id
@@ -164,6 +180,8 @@ paths:
                 $ref: '#/components/schemas/FormOutput'
         404:
           description: Form not found
+        429:
+          description: Rate limit exceeded
         500:
           description: Internal server error
 
@@ -173,6 +191,10 @@ paths:
       tags: [Forms]
       security:
         - bearerAuth: []
+      x-rate-limit:
+        limit: 100
+        window: 1m
+        description: Rate limit of 100 requests per 1 minutes
       parameters:
         - in: path
           name: id
@@ -195,6 +217,8 @@ paths:
                 $ref: '#/components/schemas/FormOutput'
         404:
           description: Form not found
+        429:
+          description: Rate limit exceeded
         500:
           description: Internal server error
 
@@ -204,6 +228,10 @@ paths:
       tags: [Forms]
       security:
         - bearerAuth: []
+      x-rate-limit:
+        limit: 100
+        window: 1m
+        description: Rate limit of 100 requests per 1 minutes
       parameters:
         - in: path
           name: id
@@ -220,6 +248,8 @@ paths:
                 $ref: '#/components/schemas/FormOutput'
         404:
           description: Form not found
+        429:
+          description: Rate limit exceeded
         500:
           description: Internal server error
 
@@ -229,6 +259,10 @@ paths:
       tags: [User]
       security:
         - bearerAuth: []
+      x-rate-limit:
+        limit: 100
+        window: 1m
+        description: Rate limit of 100 requests per 1 minutes
       parameters:
         - in: path
           name: id
@@ -243,15 +277,21 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
-        500:
-          description: Server error
         403:
           description: Forbidden
+        429:
+          description: Rate limit exceeded
+        500:
+          description: Server error
 
   /auth/register:
     post:
       summary: Register a new user
       tags: [Auth]
+      x-rate-limit:
+        limit: 10
+        window: 1m
+        description: Rate limit of 10 requests per 1 minutes
       requestBody:
         required: true
         content:
@@ -273,6 +313,8 @@ paths:
                 $ref: '#/components/schemas/User'
         409:
           description: User already exists
+        429:
+          description: Rate limit exceeded
         500:
           description: Internal server error
 
@@ -280,6 +322,10 @@ paths:
     post:
       summary: Log in a user
       tags: [Auth]
+      x-rate-limit:
+        limit: 10
+        window: 1m
+        description: Rate limit of 10 requests per 1 minutes
       requestBody:
         required: true
         content:
@@ -307,6 +353,8 @@ paths:
           description: Invalid credentials
         404:
           description: User not found
+        429:
+          description: Rate limit exceeded
         500:
           description: Internal server error
 
@@ -314,6 +362,10 @@ paths:
     post:
       summary: Create a new feedback
       tags: [Feedbacks]
+      x-rate-limit:
+        limit: 5
+        window: 1m
+        description: Rate limit of 5 requests per 1 minutes
       parameters:
         - in: path
           name: id
@@ -354,6 +406,8 @@ paths:
           description: Form not found
         400:
           description: Missing field or Invalid type for field value (expected type) (received type)
+        429:
+          description: Rate limit exceeded
         500:
           description: Internal server error
 
@@ -363,6 +417,10 @@ paths:
       tags: [Feedbacks]
       security:
         - bearerAuth: []
+      x-rate-limit:
+        limit: 100
+        window: 1m
+        description: Rate limit of 100 requests per 1 minutes
       responses:
         200:
           description: Successfully retrieved feedbacks
@@ -374,6 +432,8 @@ paths:
                   $ref: '#/components/schemas/FeedbackOutput'
         204:
           description: No content
+        429:
+          description: Rate limit exceeded
         500:
           description: Internal server error
 
@@ -383,6 +443,10 @@ paths:
       tags: [Feedbacks]
       security:
         - bearerAuth: []
+      x-rate-limit:
+        limit: 100
+        window: 1m
+        description: Rate limit of 100 requests per 1 minutes
       parameters:
         - in: path
           name: id
@@ -399,6 +463,8 @@ paths:
                 $ref: '#/components/schemas/FeedbackOutput'
         404:
           description: Feedback not found
+        429:
+          description: Rate limit exceeded
         500:
           description: Internal server error
 
@@ -408,6 +474,10 @@ paths:
       tags: [Feedbacks]
       security:
         - bearerAuth: []
+      x-rate-limit:
+        limit: 100
+        window: 1m
+        description: Rate limit of 100 requests per 1 minutes
       parameters:
         - in: path
           name: id
@@ -426,6 +496,8 @@ paths:
                   $ref: '#/components/schemas/FeedbackOutput'
         204:
           description: No content
+        429:
+          description: Rate limit exceeded
         500:
           description: Internal server error
 
@@ -435,6 +507,10 @@ paths:
       tags: [Feedbacks]
       security:
         - bearerAuth: []
+      x-rate-limit:
+        limit: 100
+        window: 1m
+        description: Rate limit of 100 requests per 1 minutes
       parameters:
         - in: path
           name: id
@@ -451,5 +527,7 @@ paths:
                 $ref: '#/components/schemas/FeedbackOutput'
         404:
           description: Feedback not found
+        429:
+          description: Rate limit exceeded
         500:
           description: Internal server error
